add portal bypass effect

--- a/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
+++ b/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
@@ -7,9 +7,13 @@
   "item.imm_ptl_surv_adapt.portal_ingot": "Portal Ingot",
   "item.imm_ptl_surv_adapt.portal_modificator_delete": "Portal Modificator Delete",
   "item.imm_ptl_surv_adapt.portal_completer": "Portal Completer",
+  "item.minecraft.potion.effect.Portal bypass": "Potion of Portal Bypass",
+  "item.minecraft.splash_potion.effect.Portal bypass": "Splash Potion of Portal Bypass",
+  "item.minecraft.lingering_potion.effect.Portal bypass": "Lingering Potion of Portal Bypass",
   "block.imm_ptl_surv_adapt.portal_block": "Portal Block",
   "block.imm_ptl_surv_adapt.used_portal_block": "Used Portal Block",
   "itemGroup.imm_ptl_surv_adapt.immersive_portals_survival_adaptation_group": "Immersive Portals Survival Adaptation",
+  "effect.imm_ptl_surv_adapt.portal_bypass": "Portal By Pass",
   "info.imm_ptl_surv_adapt.rotate": "%s along the %s%s axis",
   "info.imm_ptl_surv_adapt.too_far": "You are trying to move the portal too far away",
   "tooltip.imm_ptl_surv_adapt.increase_distance_modificator": "Increase distance by: %s",
