Adapt create small wrapping zone

--- a/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
+++ b/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
@@ -10,8 +10,11 @@
   "item.minecraft.potion.effect.Portal bypass": "Potion of Portal Bypass",
   "item.minecraft.splash_potion.effect.Portal bypass": "Splash Potion of Portal Bypass",
   "item.minecraft.lingering_potion.effect.Portal bypass": "Lingering Potion of Portal Bypass",
+  "item.imm_ptl_surv_adapt.portal_wrapping_zone": "Portal Wrapping Zone",
   "block.imm_ptl_surv_adapt.portal_block": "Portal Block",
   "block.imm_ptl_surv_adapt.used_portal_block": "Used Portal Block",
+  "block.imm_ptl_surv_adapt.wrapping_zone_start": "Wrapping Zone Start",
+  "block.imm_ptl_surv_adapt.wrapping_zone_end": "Wrapping Zone End",
   "itemGroup.imm_ptl_surv_adapt.immersive_portals_survival_adaptation_group": "Immersive Portals Survival Adaptation",
   "effect.imm_ptl_surv_adapt.portal_bypass": "Portal By Pass",
   "info.imm_ptl_surv_adapt.rotate": "%s along the %s%s axis",
@@ -23,6 +26,10 @@
   "message.imm_ptl_surv_adapt.place_too_far": "Destination must not be more than 100 blocks away from the origin",
   "message.imm_ptl_surv_adapt.portal_obstructed_origin": "The portal origin is obstructed",
   "message.imm_ptl_surv_adapt.portal_obstructed_destination": "The portal destination is obstructed",
+  "message.imm_ptl_surv_adapt.warping_zone_start_set": "Wrapping zone start set at: %s %s %s",
+  "message.imm_ptl_surv_adapt.warping_zone_end_set": "Wrapping zone end set at: %s %s %s",
+  "message.imm_ptl_surv_adapt.missing_warping_zone_blocks": "Missing start/end block",
+  "message.imm_ptl_surv_adapt.wrapping_zone_too_big": "Wrapping zone is too big",
   "desc.imm_ptl_surv_adapt.portal_creator_one_way": "Creates a one-way portal from an origin to a destination",
   "desc.imm_ptl_surv_adapt-portal_creator_one_way_line_2": "Shift use to set destination, use to place portal",
   "tooltip.imm_ptl_surv_adapt.portal_creator_one_way_destination_set": "Destination: %s %s %s",
@@ -40,6 +47,9 @@
   "tooltip.imm_ptl_surv_adapt.remove_portal_1": "It will%s remove the back face of the interacted portal",
   "tooltip.imm_ptl_surv_adapt.remove_portal_2": "It will%s remove the exit portal of the interacted portal",
   "tooltip.imm_ptl_surv_adapt.remove_portal_3": "It will%s remove the back face of the exit portal",
+  "tooltip.imm_ptl_surv_adapt.portal_wrapping_zone_desc": "Creates a small wrapping zone",
+  "tooltip.imm_ptl_surv_adapt.portal_wrapping_zone_desc1": "Use on Wrapping Zone Start/End to set the origin and destination",
+  "tooltip.imm_ptl_surv_adapt.portal_wrapping_zone_type": "Type: %s",
   "word.imm_ptl_surv_adapt.not": " not",
   "tooltip.imm_ptl_surv_adapt.shift_use_to_configure": "Shift and use to configure",
   "gui.imm_ptl_surv_adapt.configure_portal_modificator_title": "Portal modificator configuration",
