Add portal claimer and disclaimer + bugfixes

--- a/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
+++ b/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
@@ -1,16 +1,18 @@
 {
   "item.imm_ptl_surv_adapt.portal_modificator": "Portal Modificator",
   "item.imm_ptl_surv_adapt.portal_creator_one_way": "Portal Creator One Way",
-  "block.imm_ptl_surv_adapt.portal_ore": "Portal Ore",
   "item.imm_ptl_surv_adapt.portal_modificator_distance_modifier": "Portal Modificator Distance Modifier",
   "item.imm_ptl_surv_adapt.portal_modificator_rotation_modifier": "Portal Modificator Rotation Modifier",
   "item.imm_ptl_surv_adapt.portal_ingot": "Portal Ingot",
   "item.imm_ptl_surv_adapt.portal_modificator_delete": "Portal Modificator Delete",
   "item.imm_ptl_surv_adapt.portal_completer": "Portal Completer",
+  "item.imm_ptl_surv_adapt.portal_claimer": "Portal Claimer",
+  "item.imm_ptl_surv_adapt.portal_disclaimer": "Portal Disclaimer",
   "item.minecraft.potion.effect.Portal bypass": "Potion of Portal Bypass",
   "item.minecraft.splash_potion.effect.Portal bypass": "Splash Potion of Portal Bypass",
   "item.minecraft.lingering_potion.effect.Portal bypass": "Lingering Potion of Portal Bypass",
   "item.imm_ptl_surv_adapt.portal_wrapping_zone": "Portal Wrapping Zone",
+  "block.imm_ptl_surv_adapt.portal_ore": "Portal Ore",
   "block.imm_ptl_surv_adapt.portal_block": "Portal Block",
   "block.imm_ptl_surv_adapt.used_portal_block": "Used Portal Block",
   "block.imm_ptl_surv_adapt.wrapping_zone_start": "Wrapping Zone Start",
@@ -19,8 +21,6 @@
   "effect.imm_ptl_surv_adapt.portal_bypass": "Portal By Pass",
   "info.imm_ptl_surv_adapt.rotate": "%s along the %s%s axis",
   "info.imm_ptl_surv_adapt.too_far": "You are trying to move the portal too far away",
-  "tooltip.imm_ptl_surv_adapt.increase_distance_modificator": "Increase distance by: %s",
-  "tooltip.imm_ptl_surv_adapt.increase_rotation_modificator": "Increase degrees by: %s",
   "message.imm_ptl_surv_adapt.destination_set": "Destination set at: %s %s %s",
   "message.imm_ptl_surv_adapt.destination_not_set": "Destination is not set\nShift and use on a block to set it",
   "message.imm_ptl_surv_adapt.place_too_far": "Destination must not be more than 100 blocks away from the origin",
@@ -32,6 +32,8 @@
   "message.imm_ptl_surv_adapt.wrapping_zone_too_big": "Wrapping zone is too big",
   "desc.imm_ptl_surv_adapt.portal_creator_one_way": "Creates a one-way portal from an origin to a destination",
   "desc.imm_ptl_surv_adapt-portal_creator_one_way_line_2": "Shift use to set destination, use to place portal",
+  "tooltip.imm_ptl_surv_adapt.increase_distance_modificator": "Increase distance by: %s",
+  "tooltip.imm_ptl_surv_adapt.increase_rotation_modificator": "Increase degrees by: %s",
   "tooltip.imm_ptl_surv_adapt.portal_creator_one_way_destination_set": "Destination: %s %s %s",
   "tooltip.imm_ptl_surv_adapt.portal_creator_one_way_destination_not_set": "Destination is not set",
   "tooltip.imm_ptl_surv_adapt.portal_creator_one_way_bi_faced": "Portal will be bi-faced",
@@ -50,16 +52,18 @@
   "tooltip.imm_ptl_surv_adapt.portal_wrapping_zone_desc": "Creates a small wrapping zone",
   "tooltip.imm_ptl_surv_adapt.portal_wrapping_zone_desc1": "Use on Wrapping Zone Start/End to set the origin and destination",
   "tooltip.imm_ptl_surv_adapt.portal_wrapping_zone_type": "Type: %s",
-  "word.imm_ptl_surv_adapt.not": " not",
   "tooltip.imm_ptl_surv_adapt.shift_use_to_configure": "Shift and use to configure",
-  "gui.imm_ptl_surv_adapt.configure_portal_modificator_title": "Portal modificator configuration",
-  "gui.imm_ptl_surv_adapt.configure_portal_creator_title": "Portal creator configuration",
-  "gui.imm_ptl_surv_adapt.configure_portal_completer_title": "Portal completer configuration",
   "tooltip.imm_ptl_surv_adapt.portal_creator_one_way_width_and_number": "Width: %s",
   "tooltip.imm_ptl_surv_adapt.portal_creator_one_way_height_and_number": "Height: %s",
   "tooltip.imm_ptl_surv_adapt.portal_creator_one_way_width": "Width:",
   "tooltip.imm_ptl_surv_adapt.portal_creator_one_way_height": "Height:",
   "tooltip.imm_ptl_surv_adapt.portal_completer_desc": "Use on a portal to complete the faces below",
+  "tooltip.imm_ptl_surv_adapt.portal_claimer_desc": "Use on a portal to make it so only you can access it",
+  "tooltip.imm_ptl_surv_adapt.portal_disclaimer_desc": "Use on a portal that only you can access to make accessible to everyone",
+  "word.imm_ptl_surv_adapt.not": " not",
+  "gui.imm_ptl_surv_adapt.configure_portal_modificator_title": "Portal modificator configuration",
+  "gui.imm_ptl_surv_adapt.configure_portal_creator_title": "Portal creator configuration",
+  "gui.imm_ptl_surv_adapt.configure_portal_completer_title": "Portal completer configuration",
   "gui.imm_ptl_surv_adapt.back_portal": "Back face of portal",
   "gui.imm_ptl_surv_adapt.back_exit_portal": "Back face of exit portal",
   "gui.imm_ptl_surv_adapt.exit_portal": "Exit portal"
