--- a/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
+++ b/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
@@ -20,10 +20,10 @@
   "itemGroup.imm_ptl_surv_adapt.immersive_portals_survival_adaptation_group": "Immersive Portals Survival Adaptation",
   "effect.imm_ptl_surv_adapt.portal_bypass": "Portal By Pass",
   "info.imm_ptl_surv_adapt.rotate": "%s along the %s%s axis",
-  "info.imm_ptl_surv_adapt.too_far": "You are trying to move the portal too far away",
+  "message.imm_ptl_surv_adapt.too_far": "You are trying to move the portal too far away",
   "message.imm_ptl_surv_adapt.destination_set": "Destination set at: %s %s %s",
   "message.imm_ptl_surv_adapt.destination_not_set": "Destination is not set\nShift and use on a block to set it",
-  "message.imm_ptl_surv_adapt.place_too_far": "Destination must not be more than 100 blocks away from the origin",
+  "message.imm_ptl_surv_adapt.place_too_far": "Destination must not be more than %s blocks away from the origin",
   "message.imm_ptl_surv_adapt.portal_obstructed_origin": "The portal origin is obstructed",
   "message.imm_ptl_surv_adapt.portal_obstructed_destination": "The portal destination is obstructed",
   "message.imm_ptl_surv_adapt.warping_zone_start_set": "Wrapping zone start set at: %s %s %s",
@@ -31,6 +31,7 @@
   "message.imm_ptl_surv_adapt.missing_warping_zone_blocks": "Missing start/end block",
   "message.imm_ptl_surv_adapt.wrapping_zone_too_big": "Wrapping zone is too big",
   "message.imm_ptl_surv_adapt.warn_how_to_use": "Check the wiki of Immersive Portals Survival Adaptation: ",
+  "bar.imm_ptl_surv_adapt.portal_claiming_disabled": "Portal claiming is disabled currently",
   "desc.imm_ptl_surv_adapt.portal_creator_one_way": "Creates a one-way portal from an origin to a destination",
   "desc.imm_ptl_surv_adapt-portal_creator_one_way_line_2": "Shift use to set destination, use to place portal",
   "tooltip.imm_ptl_surv_adapt.increase_distance_modificator": "Increase distance by: %s",
@@ -67,5 +68,11 @@
   "gui.imm_ptl_surv_adapt.configure_portal_completer_title": "Portal completer configuration",
   "gui.imm_ptl_surv_adapt.back_portal": "Back face of portal",
   "gui.imm_ptl_surv_adapt.back_exit_portal": "Back face of exit portal",
-  "gui.imm_ptl_surv_adapt.exit_portal": "Exit portal"
+  "gui.imm_ptl_surv_adapt.exit_portal": "Exit portal",
+  "config.imm_ptl_surv_adapt.title": "Config",
+  "config.imm_ptl_surv_adapt.mainCategory": "Main",
+  "config.imm_ptl_surv_adapt.maxDistancePortalModificatorMove": "Max distance a portal can be moved",
+  "config.imm_ptl_surv_adapt.maxDistancePortalCreator": "Max distance of the portal creator",
+  "config.imm_ptl_surv_adapt.maxDistancePortalWrappingBoxSize": "Max size of portal wrapping zone",
+  "config.imm_ptl_surv_adapt.enablePortalClaiming": "Enable portal claiming"
 }
