--- a/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
+++ b/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
@@ -75,5 +75,7 @@
   "config.imm_ptl_surv_adapt.maxDistancePortalCreator": "Max distance of the portal creator",
   "config.imm_ptl_surv_adapt.maxDistancePortalWrappingBoxSize": "Max size of portal wrapping zone",
   "config.imm_ptl_surv_adapt.enablePortalClaiming": "Enable portal claiming",
-  "config.imm_ptl_surv_adapt.intSliderRemember": "Remember that you can always set any value in the config file"
+  "config.imm_ptl_surv_adapt.intSliderRemember": "Remember that you can always set any value in the config file",
+  "config.imm_ptl_surv_adapt.maxPortalCreatorWidth": "Max width of portal creator",
+  "config.imm_ptl_surv_adapt.maxPortalCreatorHeight": "Max height of portal creator"
 }
