re-texture ores, add deepslate variation and generation, also add raw portal ingot

--- a/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
+++ b/src/main/resources/assets/imm_ptl_surv_adapt/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.imm_ptl_surv_adapt.portal_modificator_distance_modifier": "Portal Modificator Distance Modifier",
   "item.imm_ptl_surv_adapt.portal_modificator_rotation_modifier": "Portal Modificator Rotation Modifier",
   "item.imm_ptl_surv_adapt.portal_ingot": "Portal Ingot",
+  "item.imm_ptl_surv_adapt.portal_ingot_raw": "Raw Portal Ingot",
   "item.imm_ptl_surv_adapt.portal_modificator_delete": "Portal Modificator Delete",
   "item.imm_ptl_surv_adapt.portal_completer": "Portal Completer",
   "item.imm_ptl_surv_adapt.portal_claimer": "Portal Claimer",
@@ -14,6 +15,7 @@
   "item.imm_ptl_surv_adapt.portal_wrapping_zone": "Portal Wrapping Zone",
   "block.imm_ptl_surv_adapt.portal_ore": "Portal Ore",
   "block.imm_ptl_surv_adapt.portal_block": "Portal Block",
+  "block.imm_ptl_surv_adapt.portal_block_raw": "Raw Portal Block",
   "block.imm_ptl_surv_adapt.used_portal_block": "Used Portal Block",
   "block.imm_ptl_surv_adapt.wrapping_zone_start": "Wrapping Zone Start",
   "block.imm_ptl_surv_adapt.wrapping_zone_end": "Wrapping Zone End",
